force-app/main/default/objects/FSM_SchedulingPreRequisites__c/FSM_SchedulingPreRequisites__c.object-meta.xml
<CustomObject>
    <description>Created as part of SFS-1923</description>
    <label>Scheduling Pre Requisites</label>
    <nameField>
        <label>Pre Requisite</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduling Pre Requisites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>