force-app/main/default/objects/FSM_SchedulingPreRequisites__c/fields/FSM_MandatoryForDispatch__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryForDispatch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of SFS-1923</description>
    <label>Mandatory For Dispatch</label>
    <type>Checkbox</type>
</CustomField>