force-app/main/default/objects/FSM_SchedulingPreRequisites__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSM_MandatoryForDispatch__c</columns>
    <columns>FSM_MandatoryForScheduling__c</columns>
    <columns>FSM_ExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>