force-app/main/default/objects/FSM_SchedulingPreRequisites__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FSM_MandatoryForDispatch__c</columns>
    <columns>FSM_MandatoryForScheduling__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>2/23/2024 12:00 AM</value>
    </filters>
    <label>All</label>
</ListView>